box alignment corrected

--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ background-color: hsl(34, 97%, 64%);
 background-color: hsl(212, 86%, 64%);
 }
 
+.box-push {
+    transform: translateY(50%)
+}
+
 .box h2 {
     margin:0; 
 
